--- a/.github/workflows/build_and_publish_release.yaml
+++ b/.github/workflows/build_and_publish_release.yaml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - id: semver
       env:
-        RELEASE_VERSION: ${{ github.event_name != 'pull_request' && github.event.inputs.tag || 'main' }}
+        RELEASE_VERSION: v0.1
       run: |
         if [[ "${RELEASE_VERSION}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+ ]]; then
           echo "semver=${RELEASE_VERSION/v/}" >> "$GITHUB_OUTPUT"
